GNOME Bugzilla – Bug 753855
wayland/pointer-gestures: Send error on protocol version mismatch
Last modified: 2015-08-21 16:05:29 UTC
When a client binds an incompatible version, we should terminate it. This check should only be there for the unstable version, as once it is declared stable and renamed, future versions will be backward compatible.
Created attachment 309665 [details] [review] wayland/pointer-gestures: Send error on protocol version mismatch
Comment on attachment 309665 [details] [review] wayland/pointer-gestures: Send error on protocol version mismatch Looks good to me! It seems fine as a fool-proof check. As agreed on irc we might consider relaxing if future protocol changes turn out to be compatible.
Attachment 309665 [details] pushed as e76c3ec - wayland/pointer-gestures: Send error on protocol version mismatch